--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,7 @@ config/local.js
 ################################################
 node_modules
 assets/uploads
+package-lock.json
 ################################################
 # 
 # > Do you use bower?
